--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -69,7 +69,7 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/register_edit_text"
                 android:ems="10"
-                android:hint="Şifre"
+                android:hint="Şifre (En az 6 karakter)"
                 android:inputType="textPassword"
                 android:padding="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
